# Game_Of_Life

./: '  .gitignore  ;  BitArray.cpp  BitArray.h  Build.lua  CMakeLists.txt  GameBoard.cpp  GameBoard.h  Game_Of_Life.sln  Game_Of_Life.vcxproj  Game_Of_Life.vcxproj.filters  Makefile  README.md  WrappedPoint.h  compile_commands.json  main.cpp  perf.data.old  readme.txt
App/: Build-App.lua  Makefile
App/src/: .GameBoard.cpp.kate-swp  BitArray.h  Chunk.cpp  Chunk.h  GameBoard.cpp  GameBoard.h  main.cpp
App/src/Utils/: Console.h  WrappedPoint.h
Game_Of_Life/: Game_Of_Life.vcxproj  Game_Of_Life.vcxproj.filters
Game_Of_Life/res/shaders/: Basic.fragment.glsl  Basic.vertex.glsl
Game_Of_Life/src/: ArrayBuffer.cpp  ArrayBuffer.h  ArrayBufferLayout.h  BitArray.cpp  BitArray.h  GameBoard.cpp  GameBoard.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
Game_Of_Life/src/Utils/: WrappedPoint.h
Libraries/: Build-Libraries.lua  Makefile
Libraries/LibFunni/: CMakeLists.txt  libFunni.cpp  log.h
Libraries/LibFunni/src/LibFunni/: log.h
Libraries/src/LibFunni/: pointtech.h
Scripts/: Setup-Linux.sh  Setup-Windows.bat
libFunni/: libFunni.cpp  libFunni.vcxproj  libFunni.vcxproj.filters  log.h
libraries/: CMakeLists.txt
libraries/LibFunni/src/LibFunni/: pointtech.h
src/: BitArray.cpp  BitArray.h  Chunk.cpp  Chunk.h  GameBoard.cpp  GameBoard.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
src/shaders/: chunk.frag  chunk.vert
src/utils/: Console.h  WrappedPoint.h
